--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "chai": "^3",
     "mocha": "^3",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "supertest": "^3.0.0"
   }
 }
