--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   "devDependencies": {
     "chai": "^3",
     "mocha": "^3",
-    "express": "^4.15.2",
-    "supertest": "^3.0.0"
+    "express": "^4",
+    "supertest": "^3",
+    "hapi": "^16"
   }
 }
