--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hydra-integration",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Minimalistic 'hydra integration' module, intended for Node.js web frameworks integration.",
   "main": "index.js",
   "scripts": {
@@ -20,7 +20,8 @@
     "hapi",
     "service",
     "sails",
-    "restify"
+    "restify",
+    "restana"
   ],
   "engines": {
     "node": ">=7.x"
