--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hydra-integration",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description":
     "Minimalist 'hydra integration' module, intended for Node.js web frameworks integration.",
   "main": "index.js",
@@ -37,6 +37,7 @@
     "express-list-endpoints": "3.0.0"
   },
   "devDependencies": {
+    "body-parser": "^1.18.2",
     "chai": "3.x.x",
     "eslint": "^4.7.0",
     "eslint-config-airbnb": "^15.1.0",
@@ -47,6 +48,7 @@
     "eslint-plugin-react": "^7.3.0",
     "express": "4.x.x",
     "hapi": "16.x.x",
+    "hydra": "1.x.x",
     "koa": "2.x.x",
     "koa-router": "7.x.x",
     "mocha": "3.x.x",
