--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "hydra-integration",
   "version": "1.0.2",
-  "description":
-    "Minimalist 'hydra integration' module, intended for Node.js web frameworks integration.",
+  "description": "Minimalist 'hydra integration' module, intended for Node.js web frameworks integration.",
   "main": "index.js",
   "scripts": {
     "test": "mocha tests"
@@ -56,5 +55,10 @@
     "restify-plugins": "1.6.0",
     "supertest": "3.x.x"
   },
-  "files": ["LICENSE.md", "README.md", "index.js", "libs/"]
+  "files": [
+    "LICENSE.md",
+    "README.md",
+    "index.js",
+    "libs/"
+  ]
 }
