--- a/package.json
+++ b/package.json
@@ -41,15 +41,15 @@
     "express": "^4.17.1",
     "hapi": "^16",
     "hydra": "^1.7.1",
-    "koa": "^2.7.0",
+    "koa": "^2.11.0",
     "koa-router": "^7.4.0",
-    "mocha": "^5.2.0",
-    "nyc": "^14.1.1",
-    "restana": "^3.1.0",
+    "mocha": "^6.2.2",
+    "nyc": "^15.0.0",
+    "restana": "^3.4.2",
     "restify": "6.0.0",
-    "restify-plugins": "1.6.0",
-    "standard": "^12.0.1",
-    "supertest": "^3.4.2"
+    "restify-plugins": "^1.6.0",
+    "standard": "^14.3.1",
+    "supertest": "^4.0.2"
   },
   "files": [
     "LICENSE.md",
